# kutu

./: .README.md.swp  .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: rust.yml
migrations/2024-02-25-210503_users/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
