[package]
name = "kutu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  "0.5.0"
simple-log = "1.6.0"
log = "0.4.20"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

